<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I-Futuer BLE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    
            <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">透传接收:</string>
    <string name="label_device_address">MAC地址:</string>
    <string name="label_state">连接状态:</string>
    <string name="no_data">No data</string>
    <string name="connected">已连接设备</string>
    <string name="connecting">连接中....</string>
    <string name="disconnected">断开连接</string>
    <string name="waittoconnect">等待连接</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="TXD">发送数据:</string>
    
        <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">连接设备</string>
    <string name="menu_disconnect">断开连接</string>
    <string name="menu_scan">扫描设备</string>
    <string name="menu_stop">停止扫描</string>
    
     <string name="menu_set">说明</string>
     <string name="menu_set1">扫描</string>
      
    <string name="menu_save">保存</string>
    <string name="Test_Description">测试操作主要针对设备检测头两个灯源检测，OFF为关闭，ON为开启，点击开关按钮后观察设备检测头灯源是否正常。</string>
    <string name="Cal_Description">设备初始化步骤根据提示执行
          第一步：校准  --前提是将设备检测头对准提供的色卡片后点击校准按键
          第二步：检测  --前提是将设备检测头对准提供的色卡片后点击校准按键
          第三步：写入
          点击每一步按钮当显示框出现 finish 字样即成功操作可进行下一步</string>

    <string name="APP_Description">软件只针对诠释美下KOI设备的出厂初始化初始化分为两个步骤，连接设备成功后首先进行测试步骤，测试步骤完成后返回接着可进行校准操作。</string>
        <string name="net_desc">1</string>
    <string name="helps_yobo">2
</string>
   <string name="helps_text">3
</string>

</resources>
