<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="14sp"/>
        
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="14sp"/>
       
        <TextView android:id="@+id/connection_state"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="14sp"/>


            
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:background="#e0e0e0"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_data"
                  android:textSize="14sp"/>

        
        <TextView android:id="@+id/data_value"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:text="hex收" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="清除"
            android:textSize="10sp" />
        
        
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
      <EditText 
	android:id="@+id/rx_data_id_1"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:enabled="true"
    android:gravity="top"
    android:inputType="textMultiLine"
    android:minLines="5"
    android:maxLines="10"
    android:scrollbars="vertical" 
    android:background="@android:drawable/edit_text"
    android:focusable="false"
    android:textSize="14dp"


          />

    </LinearLayout>


    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#e0e0e0"
        >
    </LinearLayout>

       <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="3dp"
        android:background="#e0e0e0"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        </LinearLayout>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">


     <Button
         android:id="@+id/jiaozhun"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:text="第一步：校准"
         android:textSize="10sp" />

     <Button

         android:id="@+id/jiance"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"
         android:text="第二步：检测"
         android:textSize="10sp" />

     <Button

         android:id="@+id/write"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"
         android:text="第三步：写入"
         android:textSize="10sp" />

 </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="#e0e0e0"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Cal_Description"
            />


    </LinearLayout>




</LinearLayout>