<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_device_address"
                  android:textSize="15sp"/>
        
        <TextView android:id="@+id/device_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp"
                  >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_state"
                  android:textSize="15sp"/>
       
        <TextView android:id="@+id/connection_state"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/disconnected"
                  android:textSize="15sp"/>

    </LinearLayout>
    

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#99ccff"
                  android:layout_margin="5dp"
                  >
    </LinearLayout>
    
    <LinearLayout android:orientation="horizontal"
        
        android:layout_width="fill_parent"
        android:layout_height="40dp">

        <TextView android:id="@+id/new_pass_txt"
            android:layout_height="36dp"
            android:layout_width="wrap_content"
            android:text="Name："
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            />
        <EditText android:id="@+id/switch_new_pass_value"
            android:layout_width="150sp"
            android:layout_height="37dp"
            android:text="123456"
            android:textColor="#0000ff"
            android:textSize="14dp"
            android:layout_marginTop="1dp"
            android:textCursorDrawable="@null"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="2dp"
                  android:background="#99ccff"
                  android:layout_margin="5dp"
                  >
     </LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         >

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp"
         >

         <Button
             android:id="@+id/Test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             android:layout_marginRight="80dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:text="测试"
             android:textSize="25sp" />
        </LinearLayout>
     </LinearLayout>

     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
         <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
         >


             <Button
                 android:id="@+id/calibration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="80dp"
                 android:layout_marginRight="80dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:text="校准"
                 android:textSize="25sp" />
            </LinearLayout>
     </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#99ccff"
        android:layout_margin="5dp"
        >
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"

        android:layout_width="fill_parent"
        android:layout_height="140dp">

        <TextView

            android:layout_height="120dp"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/APP_Description"
            />
    </LinearLayout>
</LinearLayout>